[package]
name = "jco_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:jco-test"
adapter = "wasi_snapshot_preview1.wasm"

[package.metadata.component.dependencies]
