[package]
name = "jco_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.16.0"

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "jco_test_bin"
# path = "src/lib.rs"

[package.metadata.component]
package = "component:jco-test"

[package.metadata.component.dependencies]
